// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables text 1`] = `
<svg
  className="sc-bdVaJa kopTPY"
  viewBox="0 0 200 200"
>
  <circle
    className="arc-background"
    r={90}
  />
  <circle
    className="arc"
    r={90}
    strokeDasharray={565.4866776461628}
    strokeDashoffset={327.9822730347744}
  />
</svg>
`;

exports[`renders custom units 1`] = `
<svg
  className="sc-bdVaJa kopTPY"
  viewBox="0 0 200 200"
>
  <circle
    className="arc-background"
    r={90}
  />
  <circle
    className="arc"
    r={90}
    strokeDasharray={565.4866776461628}
    strokeDashoffset={194.38604544086846}
  />
  <text
    dominantBaseline="middle"
    x="100"
    y="100"
  >
    42GB
  </text>
</svg>
`;

exports[`renders value 1`] = `
<svg
  className="sc-bdVaJa kopTPY"
  viewBox="0 0 200 200"
>
  <circle
    className="arc-background"
    r={90}
  />
  <circle
    className="arc"
    r={90}
    strokeDasharray={565.4866776461628}
    strokeDashoffset={327.9822730347744}
  />
  <text
    dominantBaseline="middle"
    x="100"
    y="100"
  >
    42%
  </text>
</svg>
`;

exports[`renders with custom colors 1`] = `
<svg
  className="sc-bdVaJa fmofvf"
  viewBox="0 0 200 200"
>
  <circle
    className="arc-background"
    r={90}
  />
  <circle
    className="arc"
    r={90}
    strokeDasharray={565.4866776461628}
    strokeDashoffset={5.654866776461628}
  />
  <text
    dominantBaseline="middle"
    x="100"
    y="100"
  >
    99%
  </text>
</svg>
`;
